// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`appview bookmarks views > listing > shows posts and blocked posts correctly 1`] = `
[
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "item": {
      "$type": "app.bsky.feed.defs#postView",
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 2,
      "cid": "cids(0)",
      "embed": {
        "$type": "app.bsky.embed.recordWithMedia#view",
        "media": {
          "$type": "app.bsky.embed.images#view",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(1)",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(1)",
            },
            {
              "alt": "../dev-env/assets/key-alt.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(2)",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(2)",
            },
          ],
        },
        "record": {
          "$type": "app.bsky.embed.record#view",
          "record": {
            "$type": "app.bsky.embed.record#viewBlocked",
            "author": {
              "did": "user(2)",
              "viewer": {
                "blockedBy": false,
                "blocking": "record(4)",
              },
            },
            "blocked": true,
            "uri": "record(3)",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 2,
      "quoteCount": 1,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.recordWithMedia",
          "media": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "image": {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": {
                    "$link": "cids(1)",
                  },
                  "size": 4114,
                },
              },
              {
                "alt": "../dev-env/assets/key-alt.jpg",
                "image": {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": {
                    "$link": "cids(2)",
                  },
                  "size": 12736,
                },
              },
            ],
          },
          "record": {
            "record": {
              "cid": "cids(3)",
              "uri": "record(3)",
            },
          },
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": true,
        "embeddingDisabled": false,
        "like": "record(5)",
        "threadMuted": false,
      },
    },
    "subject": {
      "cid": "cids(0)",
      "uri": "record(0)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "item": {
      "$type": "app.bsky.feed.defs#blockedPost",
      "author": {
        "did": "user(2)",
        "viewer": {
          "blockedBy": false,
          "blocking": "record(4)",
        },
      },
      "blocked": true,
      "uri": "record(3)",
    },
    "subject": {
      "cid": "cids(3)",
      "uri": "record(3)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "item": {
      "$type": "app.bsky.feed.defs#postView",
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(5)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(3)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": [
          {
            "cid": "cids(6)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(3)",
            "uri": "record(7)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(6)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(3)",
            "uri": "record(7)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 2,
      "cid": "cids(4)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(3)",
          "uri": "record(6)",
          "val": "self-label",
        },
      ],
      "likeCount": 0,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "labels": {
          "$type": "com.atproto.label.defs#selfLabels",
          "values": [
            {
              "val": "self-label",
            },
          ],
        },
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(6)",
      "viewer": {
        "bookmarked": true,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "subject": {
      "cid": "cids(4)",
      "uri": "record(6)",
    },
  },
]
`;

exports[`appview bookmarks views > listing > shows posts and blocked posts correctly 2`] = `
[
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "item": {
      "$type": "app.bsky.feed.defs#postView",
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "following": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 2,
      "cid": "cids(0)",
      "embed": {
        "$type": "app.bsky.embed.recordWithMedia#view",
        "media": {
          "$type": "app.bsky.embed.images#view",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(1)",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(1)",
            },
            {
              "alt": "../dev-env/assets/key-alt.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(2)",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(2)",
            },
          ],
        },
        "record": {
          "record": {
            "$type": "app.bsky.embed.record#viewRecord",
            "author": {
              "associated": {
                "activitySubscription": {
                  "allowSubscriptions": "followers",
                },
              },
              "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(4)",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "did": "user(2)",
              "displayName": "bobby",
              "handle": "bob.test",
              "labels": [],
              "viewer": {
                "blockedBy": false,
                "muted": false,
              },
            },
            "cid": "cids(3)",
            "embeds": [],
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": [],
            "likeCount": 0,
            "quoteCount": 1,
            "replyCount": 0,
            "repostCount": 0,
            "uri": "record(2)",
            "value": {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "langs": [
                "en-US",
                "i-klingon",
              ],
              "text": "bob back at it again!",
            },
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 2,
      "quoteCount": 1,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.recordWithMedia",
          "media": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "image": {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": {
                    "$link": "cids(1)",
                  },
                  "size": 4114,
                },
              },
              {
                "alt": "../dev-env/assets/key-alt.jpg",
                "image": {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": {
                    "$link": "cids(2)",
                  },
                  "size": 12736,
                },
              },
            ],
          },
          "record": {
            "record": {
              "cid": "cids(3)",
              "uri": "record(2)",
            },
          },
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": true,
        "embeddingDisabled": false,
        "like": "record(3)",
        "threadMuted": false,
      },
    },
    "subject": {
      "cid": "cids(0)",
      "uri": "record(0)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "item": {
      "$type": "app.bsky.feed.defs#blockedPost",
      "author": {
        "did": "user(4)",
        "viewer": {
          "blockedBy": true,
        },
      },
      "blocked": true,
      "uri": "record(4)",
    },
    "subject": {
      "cid": "cids(5)",
      "uri": "record(4)",
    },
  },
]
`;
